--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,14 @@
 </p>
 <hr><hr>
 
+<reactive-form></reactive-form>
+<hr><hr>
 
 <template-form></template-form>
 <hr><hr>
+
 <oddeven-pipe></oddeven-pipe>
 <hr><hr>
+
 <scroll-detect></scroll-detect>
 <hr><hr>
