--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<div class="home">
+  <ul class="nav nav-tabs">
+
+    <li> <a href="#"> Template Form(Student) </a> </li>
+    <li> <a href="#"> Template Form(Student) </a> </li>
+    <li> <a href="#"> Template Form(Student) </a> </li>
+    <li> <a href="#"> Template Form(Student) </a> </li>
+
+  </ul>
+</div>
 
 <reactive-form></reactive-form>
 <hr><hr>
