--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="home">
+ <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
   <ul class="nav nav-tabs">
 
     <li routerLinkActive="active" > <a routerLink="/templateform" > Template Form(Student) </a> </li>
