--- a/src/app/reactiveform/reactiveform.component.html
+++ b/src/app/reactiveform/reactiveform.component.html
@@ -1,3 +1,5 @@
+  
+  <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
   <div class="jumbotron">
   <div class="ReactiveForm">
 
@@ -71,6 +73,8 @@
     <br><br>
   <div>
 </div>
+</div>
+
 
 <div class="samplediv" *ngIf="EmployeeSignupForm.valid">
   <h2>Preview Tab</h2>
