--- a/src/app/templateform/templateform.component.html
+++ b/src/app/templateform/templateform.component.html
@@ -1,3 +1,5 @@
+<link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
+
 <div class="jumbotron">
 
   <div id="MyForm" >
@@ -8,63 +10,74 @@
 
     <div class="form-group">
 
-      <div class="form-control">
-        <label for="firstname" >First Name</label>
-      </div>
+      <label for="firstname" >First Name</label>
+
       <div class="form-control">
         <input validation required [(ngModel)]="firstname" name="ngfirstname" #ngfname="ngModel" type="text" id="firstname" />
-        <div *ngIf="ngfname.touched && ngfname.invalid">Please enter your First name</div>
+        </div>
 
-      </div>
+        <div class="alert alert-danger" *ngIf="ngfname.touched && ngfname.invalid">Please enter your First name</div>
     
 
-      <div class="form-control">
+    </div>
+    
+
+    <div class="form-group">
         <label for="lastname" >Last Name</label>
-      </div>
+      
       <div class="form-control">
         <input validation required [(ngModel)]="lastname" #nglname="ngModel" name="nglastname" type="text" id="lastname" />
-        <div *ngIf="nglname.touched && nglname.invalid">Please enter your Last name</div>
-
+        
       </div>
+      
+      <div class="alert alert-danger" *ngIf="nglname.touched && nglname.invalid">Please enter your Last name</div>
+    </div>
    
 
-      <div class="form-control">
+    <div class="form-group">
         <label for="emailaddress" >Email Address</label>
-      </div>
+      
       <div class="form-control">
         <input validation required email [(ngModel)]="emailaddress" name="email" #ngemailaddress="ngModel" type="email" id="emailaddress" />
-         <div *ngIf="ngemailaddress.touched && ngemailaddress.errors?.required">Please enter your Email Address</div>
-        <div *ngIf="ngemailaddress.touched && ngemailaddress.errors?.email">Please enter your Email address properly</div>
         
       </div>
 
-      <div class="form-control">
-        <label for="phonenumber" >Phone Number</label>
-      </div>
-      <div class="form-control">
-        <input class="alert alert-danger" validation required [maxLength]="10" minlength="10" [(ngModel)]="phonenumber" #ngphonenumber="ngModel" name="phonenumber" type="text" id="phonenumber" />
+      <div class="alert alert-danger" *ngIf="ngemailaddress.touched && ngemailaddress.errors?.required">Please enter your Email Address</div>
+        <div class="alert alert-danger" *ngIf="ngemailaddress.touched && ngemailaddress.errors?.email">Please enter your Email address properly</div>
 
-         <div *ngIf="ngphonenumber.touched && ngphonenumber.errors?.required">Please enter your Phone number</div>
+
+    </div>
+
+    <div class="form-group">
+        <label for="phonenumber" >Phone Number</label>
+      
+      <div class="form-control">
+        <input validation required [maxLength]="10" minlength="10" [(ngModel)]="phonenumber" #ngphonenumber="ngModel" name="phonenumber" type="text" id="phonenumber" />
+
+      </div>
+
+       <div class="alert alert-danger" *ngIf="ngphonenumber.touched && ngphonenumber.errors?.required">Please enter your Phone number</div>
         <div class="alert alert-danger" 
         *ngIf="ngphonenumber.touched && ngphonenumber.errors?.minlength">Phone number standard length is 10</div>
-        
-      </div>
-       <br>
+               
+    </div>
 
-      <button [disabled]="ngfname.invalid || nglname.invalid || ngphonenumber.invalid || ngemailaddress.invalid" (click)="onSubmit()">Submit</button>
+    <br>
+
+      <button class="btn btn-primary" [disabled]="ngfname.invalid || nglname.invalid || ngphonenumber.invalid || ngemailaddress.invalid" (click)="onSubmit()">Submit</button>
       
-    </div> 
 
   </form>
   
-  <div *ngIf="Tform.valid" class="PreviewTab">
+  <br>
+  <div style="text-align:center" *ngIf="Tform.valid" class="PreviewTab">
 
     <h1>Preview Tab</h1>
 
-    <h3>{{firstname}}</h3>
-    <h3>{{lastname}}</h3>
-    <h3>{{emailaddress}}</h3>
-    <h3>{{phonenumber}}</h3>
+    <h3>First Name : {{firstname}}</h3>
+    <h3>Last Name: {{lastname}}</h3>
+    <h3>Email ID: {{emailaddress}}</h3>
+    <h3>Phone Number: {{phonenumber}}</h3>
   </div>
 
 
