--- a/src/app/reactiveform/reactiveform.component.html
+++ b/src/app/reactiveform/reactiveform.component.html
@@ -78,9 +78,9 @@
 
 <div class="samplediv" *ngIf="EmployeeSignupForm.valid">
   <h2>Preview Tab</h2>
-  <h4>{{EmployeeSignupForm.value.employeeid}}</h4>
-  <h4>{{EmployeeSignupForm.value.name}}</h4>
-  <h4>{{EmployeeSignupForm.value.address}}</h4>
-  <h4>{{EmployeeSignupForm.value.phonenumber}}</h4>
+  <h4>Employee ID: {{EmployeeSignupForm.value.employeeid}}</h4>
+  <h4>Employee Name: {{EmployeeSignupForm.value.name}}</h4>
+  <h4>Address: {{EmployeeSignupForm.value.address}}</h4>
+  <h4>Phone Number: {{EmployeeSignupForm.value.phonenumber}}</h4>
 </div>
 
