--- a/src/app/scrolldirective/scrolldirective.component.html
+++ b/src/app/scrolldirective/scrolldirective.component.html
@@ -1,4 +1,5 @@
-<!-- <div class="sampletext" scrolldetect> -->
+
+  <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
 <div class="sampletext" scrolldetect>
 
   <h1 style="text-align:center"> Custom Scroll Directive </h1>
