--- a/src/app/oddorevenpipe/oddevenpipe.component.css
+++ b/src/app/oddorevenpipe/oddevenpipe.component.css
@@ -1,6 +1,6 @@
 .custompipes
 {
   text-align: center;
-  background-image: linear-gradient(violet,skyblue,yellow);
+  background-image: linear-gradient(rgb(114, 220, 247),skyblue,rgb(241, 241, 239));
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
