--- a/src/app/oddorevenpipe/oddevenpipe.component.html
+++ b/src/app/oddorevenpipe/oddevenpipe.component.html
@@ -1,3 +1,4 @@
+<link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
 <div class ="custompipes">
   
   <h1>Custom Pipes(Even)</h1>
