--- a/src/app/scrolldirective/scrolldirective.component.css
+++ b/src/app/scrolldirective/scrolldirective.component.css
@@ -1,3 +1,9 @@
 p {
   font-family: Lato;
 }
+.sampletext
+{
+  text-align: center;
+  background-image: linear-gradient(rgb(114, 220, 247),skyblue,rgb(241, 241, 239));
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
