--- a/src/app/templateform/templateform.component.css
+++ b/src/app/templateform/templateform.component.css
@@ -2,3 +2,11 @@
 {
   background-image: linear-gradient(yellow,pink,violet);
 }
+.TemplateForm
+{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+label{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-style: italic;
+}
