--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,14 @@
 
   </ul>
 </div>
+<router-outlet></router-outlet>
 
-<div>
+<!-- <div>
     <router-outlet></router-outlet>
-</div> 
+</div>  -->
+
+
+
 <!-- <reactive-form></reactive-form>
 <hr><hr>
 
