--- a/src/app/oddorevenpipe/oddevenpipe.component.html
+++ b/src/app/oddorevenpipe/oddevenpipe.component.html
@@ -3,7 +3,7 @@
   
   <h1>Custom Pipes(Even)</h1>
    
-  <label for="sampletext" ><h3>Enter a String</h3></label>&nbsp;
+  <label for="sampletext" ><h3>Enter a String</h3></label><br>
   <textarea placeholder="Enter your text here..." style="width:450px;height:70px" [(ngModel)]='sampletext' type="textarea" id="sampletext"></textarea>
   <br>
 
