--- a/src/app/oddorevenpipe/oddevenpipe.component.css
+++ b/src/app/oddorevenpipe/oddevenpipe.component.css
@@ -4,3 +4,7 @@
   background-image: linear-gradient(rgb(114, 220, 247),skyblue,rgb(241, 241, 239));
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.PreviewTab
+{
+  background-image: linear-gradient(rgb(236, 236, 189),rgb(130, 223, 247),rgb(250, 183, 250));
+} 
