--- a/src/app/oddorevenpipe/oddevenpipe.component.css
+++ b/src/app/oddorevenpipe/oddevenpipe.component.css
@@ -6,5 +6,5 @@
 }
 .PreviewTab
 {
-  background-image: linear-gradient(rgb(236, 236, 189),rgb(130, 223, 247),rgb(250, 183, 250));
+  background-image: linear-gradient(rgb(46, 184, 248),rgb(35, 203, 245));
 } 
