--- a/src/app/reactiveform/reactiveform.component.html
+++ b/src/app/reactiveform/reactiveform.component.html
@@ -1,7 +1,7 @@
   
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
   <div class="jumbotron">
-  <div class="ReactiveForm">
+  <div class="ReactiveForm col-12">
 
     <h1>Employee Signup Form</h1>
     
