--- a/src/app/scrolldirective/scrolldirective.component.html
+++ b/src/app/scrolldirective/scrolldirective.component.html
@@ -1,6 +1,6 @@
 
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
-<div class="sampletext" scrolldetect>
+<div class="sampletext col-12" scrolldetect>
 
   <h1 style="text-align:center"> Custom Scroll Directive </h1>
   <h1>What is Lorem Ipsum?</h1>
