--- a/src/app/templateform/templateform.component.html
+++ b/src/app/templateform/templateform.component.html
@@ -1,6 +1,6 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" />
 
-<div class="jumbotron">
+<div class="jumbotron col-12">
 
   <div class="TemplateForm" id="MyForm" >
   <h1>Student Registration Form</h1>
